Fix full height issue and z-index issue with poll item remove buttons.

--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -97,7 +97,7 @@
     left: 50%;
     position: relative;
     top: 25px;
-    z-index: 10000;
+    z-index: 1;
     margin-right: 26px;
 }
 
