--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,7 +49,7 @@ body {
   overscroll-behavior-y: none;
 }
 
-html, body { min-height: 100%; }
+html, body { min-height: 100vh; }
 
 h1, h2, h3, h4, label {
     font-family: 'Product Sans Bold';
